# scraping

./: bsoup4.py  pyproject.toml  quotes.json
